Finsihed the welcome page and started the dashboard

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,16 @@
-.App {
-  text-align: center;
+.darkModeButton div {
+  position: relative;
+  transition: all 0.4s;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.darkModeButton.active div {
+  transform: translateX(43px);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.darkModeButton div .darkModeIcon{
+  display: none;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.darkModeButton.active div .darkModeIcon {
+  display: block;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.darkModeButton.active div .lightModeIcon {
+  display: none;
 }
