--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,24 @@ html.dark .searchIcon {
 .noteTextArea {
   height: calc(100vh - 200px);
 }
+.cover {
+  object-fit: cover;
+}
+
+.loadingCircle {
+  animation: bounce 1s ease-in-out infinite;
+}
+.loadingCircle:nth-of-type(2) {
+  animation-delay: 0.1s;
+}
+@keyframes bounce {
+  0% {
+    transform: translateY(-10px);
+  }
+  50% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
+}
