Worked on the Colors container

--- a/src/App.css
+++ b/src/App.css
@@ -68,3 +68,6 @@ html.dark .searchIcon {
     transform: translateY(-10px);
   }
 }
+.colorCircleContainer::-webkit-scrollbar {
+  display: none;
+}
