Finished the options menu tray

--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,9 @@ html.dark .searchIcon {
 .colorCircleContainer::-webkit-scrollbar {
   display: none;
 }
+.optionsContainer {
+  transition: all 0.4s;
+}
+.optionsContainer.expanded {
+  transform: translateY(-110px);
+}
