--- a/src/App.css
+++ b/src/App.css
@@ -101,3 +101,30 @@ html.dark .searchIcon {
 .closeNoteOptions.invisible {
   opacity: 0;
 }
+.navItem {
+  transition: all 0.4s;
+  cursor: pointer;
+}
+.closeMobileNav {
+  background-color: rgba(0, 0, 0, 0);
+  backdrop-filter: blur(17px) opacity(0);
+  transition: backdrop-filter 0.4s;
+  z-index: 0;
+}
+.closeMobileNav.showing {
+  backdrop-filter: blur(17px) opacity(1);
+  background-color: rgba(0, 0, 0, 0.65);
+
+  z-index: 10;
+}
+.mobileNavPopUp {
+  z-index: -5;
+  opacity: 0;
+  transform: translateY(200px);
+  transition: all 0.4s;
+}
+.mobileNavPopUp.visible {
+  transform: translateY(0);
+  opacity: 1;
+  z-index: 20;
+}
