Finished the view note section

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,9 @@ html.dark .searchIcon {
 .noteTextArea {
   height: calc(100vh - 200px);
 }
+.viewNoteTextArea {
+  height: calc(100vh - 230px);
+}
 .cover {
   object-fit: cover;
 }
