Added transition to the get started button

--- a/src/App.css
+++ b/src/App.css
@@ -211,3 +211,6 @@ html.dark .desktopViewNoteScrollbar::-webkit-scrollbar-thumb {
 .logo {
   font-family: "Lato", sans-serif;
 }
+.getStartedButton {
+  transition: transform 0.1s;
+}
